--- a/main.css
+++ b/main.css
@@ -215,10 +215,6 @@ ul img{
     font-size: 30px;
 }
 
-.my-team-info li{
-    animation: floating 5s ease-in-out infinite;
-}
-
 @keyframes floating {
     from {
         transform: translateY(0%);
@@ -368,4 +364,56 @@ ul img{
 
 .inventory-item img{
     width: 200px;
+}
+
+#Race-liste{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.race{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    text-align: left;
+    width: 500px;
+    height: 600px;
+    background-color: rgb(30, 39, 63);
+}
+
+.item-name{
+    font-size: 20px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.race img{
+    width: 300px;
+    height: 300px;
+}
+
+.start{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(13, 21, 40);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.start:hover{
+    background-color: rgb(31, 44, 73);
+}
+
+button{
+    box-shadow: none;
+    text-decoration: none;
+    border-radius: 0px;
+    border: none;
+    color: white;
+    margin: 0;
+    padding: 0;
 }
